[tool.poetry]
name = "vnpy_jotdx"
version = "0.1.3"
description = ""
authors = ["FangyangJz <fangyang.jing@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
joconst = "^0.1.8"
jotdx = "^0.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
